# ExcelPy_Optimizer

./: .gitignore  CHANGELOG.md  README.md  demo.xlsx  environment.yml  main.ipynb  main.py  optimizer.py  optimizer_demo.ipynb  optimizer_demo.py  optimizer_demo.xlsx  pyproject.toml  test.py
data/: optimizer_demo.json
docs/: install.md  install_env.md  stop_optimizer.txt
specs/: README.md
src/excelpy_optimizer/: __init__.py  optimizer.py
src/excelpy_optimizer/utils/: json.py
utils/: config.py  file_excel.py  json.py  stop_optimizer.txt  utils.py
